# cleap

./: .gitignore  CHANGELOG  CMakeLists.txt  Doxyfile.in  README  README.md  TODO  asdf.txt  cleap_upload_doc.sh
artwork_src/: cleap_logo.blend  cleap_logo.blend1  cleap_logo.blend2
cmake_modules/: FindOpenCL.cmake
resources/: CMakeLists.txt  Makefile  cleap_logo.eps  cmake_install.cmake
src/: CMakeLists.txt  Makefile  cleap.cc  cleap.cu  cleap.h  cleap_config.h  cleap_config.h.in  cleap_doxysource.h  cleap_glx_context.cu  cleap_kernel_delaunay_transformation.cu  cleap_kernel_fix_inverted_triangles.cu  cleap_kernel_normalize_normals.cu  cleap_kernel_paint_mesh.cu  cleap_kernel_utils.cu  cleap_private.h  cmake_install.cmake
